--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -4,6 +4,13 @@
 	<title>{{ product_object.title }}</title>
 </head>
 <body>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 <br>
 <h1>{{product_object.title}}</h1>
 <br>
